Add --json option to some commands
* project-catalog list-available
* project-catalog list
* project list