@@ -18,12 +18,12 @@ package org.springframework.cli.command;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Collection;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -39,7 +39,6 @@ import org.springframework.shell.command.annotation.Command;
 import org.springframework.shell.command.annotation.Option;
 import org.springframework.shell.table.ArrayTableModel;
 import org.springframework.shell.table.BorderStyle;
-import org.springframework.shell.table.Table;
 import org.springframework.shell.table.TableBuilder;
 import org.springframework.shell.table.TableModel;
 import org.springframework.util.FileSystemUtils;
@@ -49,20 +48,23 @@ import org.springframework.util.ObjectUtils;
 public class ProjectCommands {
 
 	private static final Logger logger = LoggerFactory.getLogger(ProjectCommands.class);
+	private static final String PROJECT = "Project '";
 
 	private final SpringCliUserConfig upCliUserConfig;
 
 	private final SourceRepositoryService sourceRepositoryService;
 
 	private final TerminalMessage terminalMessage;
+	private final ObjectMapper objectMapper;
 
 	@Autowired
 	public ProjectCommands(SpringCliUserConfig upCliUserConfig,
-			SourceRepositoryService sourceRepositoryService,
-			TerminalMessage terminalMessage) {
+						   SourceRepositoryService sourceRepositoryService,
+						   TerminalMessage terminalMessage, ObjectMapper objectMapper) {
 		this.upCliUserConfig = upCliUserConfig;
 		this.sourceRepositoryService = sourceRepositoryService;
 		this.terminalMessage = terminalMessage;
+		this.objectMapper = objectMapper;
 	}
 
 	@Command(command = "add", description = "Add a project to use with the 'boot new' and 'boot add' commands")
@@ -77,30 +79,20 @@ public class ProjectCommands {
 		ProjectRepositories projectRepositoriesConfig = new ProjectRepositories();
 		projectRepositoriesConfig.setProjectRepositories(projectRepositories);
 		upCliUserConfig.setProjectRepositories(projectRepositoriesConfig);
-		this.terminalMessage.print("Project '" + name + "' added from URL = " + url);
+		this.terminalMessage.print(PROJECT + name + "' added from URL = " + url);
 	}
 
+	private record ProjectRepositoryData(String name, String url, String description, List<String> tags, String catalog) {}
+
 	@Command(command = "list", description = "List projects available for use with the 'boot new' and 'boot add' commands")
-	public Table projectList() {
-
-		Stream<String[]> header = Stream.<String[]>of(new String[] { "Name", "Description",  "URL", "Catalog", "Tags" });
-
+	public Object projectList(
+			@Option(description = "JSON format output", required = false, defaultValue = "false") boolean json
+	) throws JsonProcessingException {
 		// Retrieve project that were registered using the `project add` command and stored locally
-		Collection<ProjectRepository> projectRepositories = upCliUserConfig.getProjectRepositories().getProjectRepositories();
-		Stream<String[]> rows;
-		if (projectRepositories != null) {
-			rows = projectRepositories.stream()
-				.map(tr -> new String[] { tr.getName(),
-						Objects.requireNonNullElse(tr.getDescription(), ""),
-						tr.getUrl(),
-						"",
-						(Objects.requireNonNullElse(tr.getTags(), "")).toString() }
-			);
-		}
-		else {
-			rows = Stream.empty();
-		}
-		List<String[]> allRows = rows.collect(Collectors.toList());
+		List<ProjectRepository> repos = upCliUserConfig.getProjectRepositories().getProjectRepositories();
+		List<ProjectRepositoryData> projectRepositories = (repos == null ? Stream.<ProjectRepository>empty() : repos.stream())
+				.map(pr -> new ProjectRepositoryData(pr.getName(), pr.getUrl(), pr.getDescription(), pr.getTags(), null))
+				.collect(Collectors.toList());
 
 		// List projects that are contained in catalogs that the user had added using the `project-catalog add` command
 		List<ProjectCatalog> projectCatalogs = upCliUserConfig.getProjectCatalogs().getProjectCatalogs();
@@ -108,34 +100,33 @@ public class ProjectCommands {
 			String url = projectCatalog.getUrl();
 			Path path = sourceRepositoryService.retrieveRepositoryContents(url);
 			YamlConfigFile yamlConfigFile = new YamlConfigFile();
-			projectRepositories = yamlConfigFile.read(Paths.get(path.toString(),"project-catalog.yml"),
-					ProjectRepositories.class).getProjectRepositories();
-			Stream<String[]> fromCatalogRows;
-			if (projectRepositories != null) {
-				fromCatalogRows = projectRepositories.stream()
-						.map(tr -> new String[] {
-								tr.getName(),
-								Objects.requireNonNullElse(tr.getDescription(), ""),
-								tr.getUrl(),
-								projectCatalog.getName(),
-								(Objects.requireNonNullElse(tr.getTags(), "")).toString() }
-						);
-			} else {
-				fromCatalogRows = Stream.empty();
+			for (ProjectRepository pr : yamlConfigFile.read(Paths.get(path.toString(),"project-catalog.yml"), ProjectRepositories.class).getProjectRepositories()) {
+				projectRepositories.add(new ProjectRepositoryData(pr.getName(), pr.getUrl(), pr.getDescription(), pr.getTags(), projectCatalog.getName()));
 			}
-			List<String[]> projectCatalogRows = fromCatalogRows.collect(Collectors.toList());
-			allRows.addAll(projectCatalogRows);
-
 			// clean up temp files
 			try {
 				FileSystemUtils.deleteRecursively(path);
 			} catch (IOException ex) {
 				logger.warn("Could not delete path " + path, ex);
 			}
-
 		}
 
-		String[][] data = Stream.concat(header, allRows.stream()).toArray(String[][]::new);
+		if (json) {
+			return objectMapper.writeValueAsString(projectRepositories);
+		}
+
+		Stream<String[]> header = Stream.<String[]>of(new String[] { "Name", "Description",  "URL", "Catalog", "Tags" });
+
+		// Retrieve project that were registered using the `project add` command and stored locally
+		Stream<String[]> rows = projectRepositories.stream()
+			.map(tr -> new String[] { tr.name(),
+					Objects.requireNonNullElse(tr.description, ""),
+					tr.url(),
+					Objects.requireNonNullElse(tr.catalog, ""),
+					(Objects.requireNonNullElse(tr.tags(), "")).toString() }
+		);
+
+		String[][] data = Stream.concat(header, rows).toArray(String[][]::new);
 		TableModel model = new ArrayTableModel(data);
 		TableBuilder tableBuilder = new TableBuilder(model);
 		return tableBuilder.addFullBorder(BorderStyle.fancy_light).build();
@@ -147,15 +138,15 @@ public class ProjectCommands {
 	) {
 		List<ProjectRepository> origininalProjectRepositories = upCliUserConfig.getProjectRepositories().getProjectRepositories();
 		List<ProjectRepository> updatedProjectRepositories = origininalProjectRepositories.stream()
-			.filter(tc -> !ObjectUtils.nullSafeEquals(tc.getName(), name))
-			.collect(Collectors.toList());
+			.filter(tc -> !ObjectUtils.nullSafeEquals(tc.getName(), name)).toList();
 		if (updatedProjectRepositories.size() < origininalProjectRepositories.size()) {
 			ProjectRepositories projectRepositoriesConfig = new ProjectRepositories();
 			projectRepositoriesConfig.setProjectRepositories(updatedProjectRepositories);
 			upCliUserConfig.setProjectRepositories(projectRepositoriesConfig);
-			this.terminalMessage.print("Project '" + name + "' removed");
+			this.terminalMessage.print(PROJECT + name + "' removed");
 		} else {
-			this.terminalMessage.print("Project '" + name + "' removed");
+			this.terminalMessage.print(PROJECT + name + "' removed");
 		}
 	}
+
 }
